Rendering canvas inside page to prevent fullscreen scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
+html, body {
+  height: 100%;
+}
+
 body {
+  background: black;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 code {
